Fixed announcement expand/collapse

--- a/core/static/core/css/list.css
+++ b/core/static/core/css/list.css
@@ -120,7 +120,7 @@
     border: 0px solid var(--light-grey);
     border-top-width: 2px;
 }
-.card-body {
+.card-body p {
     margin: 0;
     overflow: hidden;
     display: -webkit-box;
